keycloak/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:039612885735:certificate/d80198c4-0b80-4548-91af-b2a37a287239
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
  name: keycloak
  namespace: default
spec:
  ingressClassName: alb
  rules:
  - host: keycloak.vikunja.click
    http:
      paths:
      - backend:
          service:
            name: keycloak
            port:
              number: 8080
        path: /
        pathType: Prefix
